[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/sprites/sprite_pack.frog_flying_one.atlastex" type="Texture" id=1]
[ext_resource path="res://res/sprites/sprite_pack.frog_flying_three.atlastex" type="Texture" id=2]
[ext_resource path="res://res/sprites/sprite_pack.frog_flying_two.atlastex" type="Texture" id=3]
[ext_resource path="res://res/themes/theme.tres" type="Theme" id=4]
[ext_resource path="res://src/actors/frog/Frog.gd" type="Script" id=5]
[ext_resource path="res://res/sprites/sprite_pack.frog_shoted.atlastex" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), null ],
"loop": true,
"name": "shooted",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.5, 13.5 )

[node name="Frog" type="Area2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly"
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 7 )
shape = SubResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="HitTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ValueLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_left = -22.5
margin_top = -42.0
margin_right = 25.5
margin_bottom = -22.0
rect_rotation = -9.5
theme = ExtResource( 4 )
text = "100"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Frog_body_entered"]
[connection signal="shooted" from="." to="." method="_on_Frog_shooted"]
[connection signal="viewport_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_viewport_exited"]
